JEDIT 4.2 VERSION HISTORY

{{{ Version 4.2pre8

Thanks to Scott Allen for contributing to this release.

{{{ Syntax Highlighting

- Lua syntax highlighting (Philipp Janda)

- SMI-MIB syntax highlighting (Scott Allen).

- Updated Lisp syntax highlighting (Ollie Rutherfurd).

- Added Swig and PSP syntax highlighting (Ollie Rutherfurd).

}}}
{{{ Bug Fixes

- Fixed NullPointerException in FileCellRenderer if a VFS.DirectoryEntry
  had a null symlinkPath (which should not be the case anyway).

- Fixed the roots: VFS to return non-null symlinkPaths.

- "Go to Last Visible Line" went one line too far if the last visible
  line was only partially visible.

- "Remove" button in Tool Bar pane of the Global Options dialog box now
  selects the next item after removing the currently selected item.

}}}

}}}

{{{ Version 4.2pre7

Thanks to Aaron Bell, Alessandro Falappa, Ben Williams, Chris Petersen,
Kris Kopicki, Lee Turner, Ollie Rutherfurd, Mike Dillon, Randolf Mock,
and Randy Hudson for contributing to this release.

{{{ Miscellaneous

- The list of modes in various dialog boxes is now sorted (this does not
  affect the order that buffer names are matched against modes).

- Bundled some macros from various sources (Ollie Rutherfurd).

- The plugin manager no longer lists the JDK's "tools.jar" if it is
  loaded.

- The "Search in Directory" command now always selects the most recently
  searched in directory. To search in the current directory with the
  filter based on the current buffer's file name, click the
  "Synchronize" button.

- Updated "Preview Javadoc of Current Buffer" macro (Tom Gutwin).

- Added option to file system browser's Commands->Encoding menu to
  disable encoding auto-detection.

- Added support for UTF-8Y encoding, which is like UTF-8 except there
  is a three-byte signature (0xEFBBBF) at the beginning of the file.
  See http://oss.software.ibm.com/icu/docs/papers/forms_of_unicode/#t2.
  UTF-8Y files are automatically detected, just like UTF-16.
